2007-03-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dacceptor.man: Fixed all warnings due to use of now deprecated
	* dexec.man: commands. Added a section about how to give feedback.
	* fa.man:
	* faop.man:

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* faop.man: Bumped versions to 0.2
	* faop.tcl: 
	* fa.man: 
	* fa.tcl: 
	* pkgIndex.tcl:

2006-06-15  Andreas Kupries <andreask@activestate.com>

	* fa.tcl:         Reworked the internal of the container and
	* faop.tcl:       operations packages to break their circularity.
	* fa.test:        The user of the operations packages now has to
	* faop.test:      specify a command to construct containers. The
	* dexec.test:     uses the ops package and sets its own class
	* dacceptor.text: command as constructor.
	* fa.man:
	* faop.man:

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tests/fa_symbols_at.test: Fixed use of duplicate test names.
	* tests/fa_symbol.test: 
	* tests/faop_remeps.test: 
	* tests/faop_reverse.test: 

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dacceptor.test: More boilerplate simplified via use of test support.
	* dexec.test:
	* fa.test:
	* faop.test:

	* tests/faop_trim.test:  Replaced old 'queryconstraint' with proper
	* tests/fa_serial.test: 'testConstraint' call.
	* tests/fa_is_useful.test: 
	* tests/fa_is_deterministic.test: 
	* tests/da_cons.test: 
	* tests/de_cons.test: 

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dacceptor.test: Hooked into the new common test support code.
	* dexec.test:
	* fa.test:
	* faop.test:

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* dacceptor.test: Fixed [SF Tcllib Bug 1316040]. Uncluttering test
	* dexec.test:     output.
	* fa.test:
	* faop.test:
	* tests/da_accept.test:
	* tests/de_exec.test:
